--- a/gestao_pessoal/templates/home.html
+++ b/gestao_pessoal/templates/home.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -6,7 +7,7 @@
     <title>RH</title>
 </head>
 <body>
-    <h1>Bem vindo ao RH</h1>
-    
+    <img src="{% static "img/ChatGPT Image 7 de abr. de 2025, 12_28_51.png" %}" alt="">
+    <link rel="stylesheet" href="{% static 'css/index.css'%}">
 </body>
 </html>
