--- a/gestao_pessoal/static/css/index.css
+++ b/gestao_pessoal/static/css/index.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    background-color: rgb(51, 56, 56);
+    background:#F0F4F8;
     
   }
 
