Inclusao de novas imagens!

--- a/gestao_pessoal/templates/home.html
+++ b/gestao_pessoal/templates/home.html
@@ -4,10 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/index.css'%}">
     <title>RH</title>
 </head>
 <body>
-    <img src="{% static "img/ChatGPT Image 7 de abr. de 2025, 12_28_51.png" %}" alt="">
-    <link rel="stylesheet" href="{% static 'css/index.css'%}">
+    <div class="banner">
+        <img src="{% static "img/cytonn-photography-n95VMLxqM2I-unsplash.jpg"%}" alt="Banner">
+    </div>
+    <div class="logo">
+        <img src="{% static "ChatGPT_Image_7_de_abr._de_2025__13_10_49-removebg-preview.png"%}" alt="logo">
+    </div>
+
 </body>
 </html>
